Swagger: method show is done
